--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ Our club is the answer and example of many people's doubts that his bike is not 
                 </div>
                 <div class="item">                                                                                                                                                                                                     
                   <div class="padding">
-                    <img class="full-img border-image border-primary" src="images/ANAND.jpg" alt="" title="Team" />
+                    <img class="full-img border-image border-primary" src="images/shikhil.jpg" alt="" title="Team" />
                     <h3 class="text-s-size-16 text-size-20 text-line-height-1 text-dark margin-top-20 margin-bottom-0">ANAND</h3>
                     <p class="text-size-14 text-dark margin-bottom-10">Editor</p>
                     
