--- a/events.html
+++ b/events.html
@@ -108,7 +108,7 @@
                             </div>
                             <div class="tm-timeline-description-wrap">
                                 <div class="tm-bg-dark tm-timeline-description">
-                                    <h3 class="tm-text-yellow tm-font-400">KARNADAKA - SANITIZER AND MASK SUPPLIED</h3>
+                                    <h3 class="tm-text-yellow tm-font-400">KARNATAKA - SANITIZER AND MASK SUPPLIED</h3>
                                     <p>We Supplied Sanitizer and Mask in Sully Police Station ,Sully Fire Station ,Mannur 8th ward.</p>
                                     <p class="tm-text-yellow float-right mb-0">02 October 2020</p>
                                 </div>
